--- a/todo_app/templates/todo/main.html
+++ b/todo_app/templates/todo/main.html
@@ -11,15 +11,13 @@
 
     </head>
     <body>
-        <h1>Ciao!</h1>
-        <hr>
+        {% include 'todo/navbar.html' %}
 
-        {% block content%}
+        {% comment %} <div class="container-fluid"> {% endcomment %}
+            {% block content %}
 
-            {% include 'todo/task_list.html'%}
-
-        {% endblock content %}
-        
+            {% endblock content %}
+        {% comment %} </div> {% endcomment %}        
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     </body>
