--- a/todo_app/templates/todo/task_list.html
+++ b/todo_app/templates/todo/task_list.html
@@ -1,12 +1,57 @@
 {% extends 'todo/main.html' %}
 {% block content %}
 
-    <div class="container-fluid">
-        {% for task in object_list%}
+    <div class="container">
+        <div class="row">
+            <div class="col mt-5">
+                <ol class="list-group list-group-numbered">
 
-            <a href="{% url 'task_details' task.pk %}">{{ task.name }}</a>
+                    {% for task in object_list%}
+                        
+                        <li class="list-group-item d-flex align-items-start">
 
-        {% endfor %}
-    </div>
+                            <div class="ms-2 me-auto">
+
+                                <div class="fw-bold"><a href="{% url 'task_details' task.pk %}">{{ task.name }}</a></div>
+                                <p>{{ task.details }}</p>
+
+                            </div>
+
+                            <span class="badge bg-primary rounded-pill">{{ task.date_due }}</span>
+
+                        </li>    
+                        
+                    {% endfor %}
+
+                </ol>
+
+
+            </div>
+        </div>
+
+    </div>            
+
+            {% comment %} <ol class="list-group list-group-numbered">
+
+                {% for task in object_list%}
+                    
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+
+                        <div class="ms-2 me-auto">
+
+                            <div class="fw-bold"><a href="{% url 'task_details' task.pk %}">{{ task.name }}</a></div>
+                            <p>{{ task.details }}</p>
+
+                        </div>
+
+                        <span class="badge bg-primary rounded-pill">{{ task.date_due }}</span>
+
+                    </li>    
+                    
+                {% endfor %}
+
+            </ol> {% endcomment %}
+
+
 
 {% endblock content%}
