Migrated DB to Postgres

--- a/todo_app/templates/todo/task_details.html
+++ b/todo_app/templates/todo/task_details.html
@@ -4,9 +4,11 @@
 
     <div class="container mx-auto mt-5">
         <h3>{{ task.name }}</h3>
-        <h4>{{ task.category }} | {{ task.priority}}</h4>
-        <h5>{{ task.date_created }} | {{ task.date_due }}</h5>
+        <h4>{{ task.category }} | Priority: {{ task.priority}}</h4>
+        <p>Created: {{ task.date_created }} | Due: {{ task.date_due }}</p>        
         <hr>
+        <h5>{{ task.description }}</h5>
+
         <p>{{ task.details|linebreaks }}</p>
     </div>
 
