--- a/todo_app/templates/todo/task_details.html
+++ b/todo_app/templates/todo/task_details.html
@@ -4,7 +4,7 @@
 
     <div class="container mx-auto mt-5">
         <h3>{{ task.name }}</h3>
-        <h4>{{ task.category }} | Priority: {{ task.priority}}</h4>
+        <h4>Category: {{ task.category }} | Priority: {{ task.priority}}</h4>
         <p>Created: {{ task.date_created }} | Due: {{ task.date_due }}</p>        
         <hr>
         <h5>{{ task.description }}</h5>
