--- a/todo_app/templates/todo/task_list.html
+++ b/todo_app/templates/todo/task_list.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="container mt-5 mx-auto">
 
             <table class="table table-hover">
 
                 <thead>
-                    <tr>
+                    <tr class="table-secondary">
                         <th>Task</th>
                         <th>Category</th>
                         <th>Priority</th>
@@ -20,7 +20,7 @@
 
                     <tbody>                    
                         <tr>
-                            <td><a href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>
+                            <td><a class="fw-bold text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>
                             <td>{{ task.category }}</td>
                             <td>{{ task.priority }}</td>
                             <td>{{ task.date_due }}</td>
