--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -20,7 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'task_list' %}">Task List</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'task_add' %}">Add Task</a>
+                </li>
             </ul>
             <span class="navbar-text">Log in</span>
 
