--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'task_add' %}">Add Task</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'category_add' %}">Add Category</a>
+                </li>
             </ul>
             <span class="navbar-text">Log in</span>
 
