--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -24,6 +24,9 @@
                     <a class="nav-link" href="{% url 'task_add' %}">Add Task</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'category_list' %}">Category List</a>
+                </li>                
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'category_add' %}">Add Category</a>
                 </li>
             </ul>
