--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container mainNavContainer mx-auto">
 
-        <a class="navbar-brand" href="#"><b>TODO</b></a>
+        <a class="navbar-brand" href="{% url 'main' %}"><b>TODO</b></a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
