--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -29,8 +29,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'category_add' %}">Add Category</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                </li>
+
             </ul>
-            <span class="navbar-text">Log in</span>
+
+            {% comment %} <span class="nav-link" href="{% url 'login' %}">Log in</span> {% endcomment %}
 
         </div>
 
