--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -10,7 +10,7 @@
         <div class="form-group">
             <form method="POST">                
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form }}
                 <button class="btn btn-primary px-5">Register</button>                    
             </form>
         </div>        
