--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -15,7 +15,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'main' %}">Home</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'main' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'task_list' %}">Task List</a>
