--- a/todo_app/templates/todo/task_add.html
+++ b/todo_app/templates/todo/task_add.html
@@ -4,19 +4,30 @@
 
 {% block content%}
 
+    {% if user.is_authenticated %}
 
-<div class="container w-75 my-4">
-    <h4>Add a New Task</h4>
-    <br>
+        <div class="container w-75 my-4">
+            <h4>Add a New Task</h4>
+            <br>
 
-    <div class="form-group w-50">
-        <form method="POST" enctype="multipart/form-data">                
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-primary px-5 my-3">Add</button>                    
-        </form>
-    </div>       
-</div>
+            <div class="form-group w-50">
+                <form method="POST" enctype="multipart/form-data">                
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button class="btn btn-primary px-5 my-3">Add</button>                    
+                </form>
+            </div>       
+        </div>
+
+    {% else %}
+
+        <div class="container w-75 my-5">
+            <h2>You are not logged in!</h2>
+            <br>
+            <a href="{% url 'login' %}">Login</a>                                
+        </div>
+        
+    {% endif %}        
 
 
 {% endblock content %}
