--- a/todo_app/templates/todo/task_details.html
+++ b/todo_app/templates/todo/task_details.html
@@ -2,16 +2,17 @@
 
 {% block content%}
 
-    <div class="container mx-auto mt-5">
-        <h3>{{ task.name }}</h3>
-        <hr>
-        <h4>Category: {{ task.category }} | Priority: {{ task.priority}} | Added by: {{ task.author }}</h4>
-        <p>Created: {{ task.date_created }} | Due: {{ task.date_due }} | Reminder: {{ task.reminder }}</p>        
-        <hr>
-        <h5>{{ task.description }}</h5>
 
-        <p>{{ task.details|linebreaks }}</p>
-    </div>
+<div class="container mx-auto mt-5">
+    <h3>{{ task.name }}</h3>
+    <hr>
+    <h4>Category: {{ task.category }} | Priority: {{ task.priority}} | Added by: {{ task.author }}</h4>
+    <p>Created: {{ task.date_created }} | Due: {{ task.date_due }}</p>        
+    <hr>
+    <h5>{{ task.description }}</h5>
+
+    <p>{{ task.details|linebreaks }}</p>
+</div>
 
 
 {% endblock content %}
