--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -15,30 +15,63 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'main' %}">Home</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'task_list' %}">Task List</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'task_add' %}">Add Task</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'category_list' %}">Category List</a>
-                </li>                
+                </li>               
+
+
+               
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'category_add' %}">Add Category</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
+            </ul>
+
+            <div class="navbar-nav justify-content-end">
+
+                {% if user.is_authenticated %}
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'task_add' %}">Add Task</a>
+                        </li>                    
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'category_add' %}">Add Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li> 
+                    </ul>
+                
+                {% else %}
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                    </ul>
+                
+                {% endif %}
+
+            </div>
+
+
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'login' %}">Log in</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Log out</a>
+                </li>                
 
             </ul>
-
-            {% comment %} <span class="nav-link" href="{% url 'login' %}">Log in</span> {% endcomment %}
 
         </div>
 
