--- a/members/templates/registration/register.html
+++ b/members/templates/registration/register.html
@@ -11,7 +11,7 @@
             <form method="POST">                
                 {% csrf_token %}
                 {{ form }}
-                <button class="btn btn-primary px-5">Register</button>                    
+                <button class="btn btn-success px-5">Register</button>                    
             </form>
         </div>        
     </div>
