--- a/todo_app/templates/todo/category_list.html
+++ b/todo_app/templates/todo/category_list.html
@@ -19,7 +19,7 @@
             {% for category in object_list %}
                                     
                 <tr>
-                    <td><a href="{% url 'category_details' category.pk %}">{{ category.name }}</a></td>
+                    <td><a class="fw-bold text-decoration-none text-body" href="{% url 'category_details' category.pk %}">{{ category.name }}</a></td>
                 </tr>
                 
             {% endfor %}
