More dark styling

--- a/todo_app/static/css/bootstrap2.css
+++ b/todo_app/static/css/bootstrap2.css
@@ -4213,7 +4213,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #375a7f;
+  background-color: #2e2e2e;
 }
 
 .nav-fill > .nav-link,
@@ -4255,8 +4255,8 @@ fieldset:disabled .btn {
   align-items: center;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .navbar > .container,
