--- a/todo_app/static/css/style.css
+++ b/todo_app/static/css/style.css
@@ -3,7 +3,11 @@ body {
     font-family: 'Segoe UI';
 }
 
-.fw-bold.lowest {
+.tr {
+    background-color:#7e5252;
+}
+
+/* .fw-bold.lowest {
     color:darkgreen;
 }
 
@@ -21,4 +25,4 @@ body {
 
 .fw-bold.highest {
     color:red;
-}
+} */
