--- a/todo_app/templates/todo/navbar.html
+++ b/todo_app/templates/todo/navbar.html
@@ -1,7 +1,7 @@
 {% block content %}
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #2C3441">
     <div class="container mainNavContainer mx-auto">
 
         <a class="navbar-brand" href="{% url 'main' %}"><b>TODO</b></a>
