--- a/todo_app/templates/todo/task_list.html
+++ b/todo_app/templates/todo/task_list.html
@@ -26,7 +26,7 @@
 
             {% if task.priority == 'Lowest' %}
                 <tr class="table-secondary border-top-0 border-bottom-0">
-                    <td><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>                        
+                    <th scope="row"><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></th>
                     <td>{{ task.priority }}</td>
                     <td>{{ task.category }}</td>
                     <td>{{ task.date_due }}</td>
@@ -35,7 +35,7 @@
 
             {% elif task.priority == 'Low' %}
                 <tr class="table-success border-top-0 border-bottom-0">
-                    <td><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>                         
+                    <th scope="row"><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></th>                         
                     <td>{{ task.priority }}</td>
                     <td>{{ task.category }}</td>
                     <td>{{ task.date_due }}</td>
@@ -44,7 +44,7 @@
 
             {% elif task.priority == 'Normal' %}
                 <tr class="table-primary border-top-0 border-bottom-0">
-                    <td><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>                         
+                    <th scope="row"><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></th>                         
                     <td>{{ task.priority }}</td>
                     <td>{{ task.category }}</td>
                     <td>{{ task.date_due }}</td>
@@ -53,7 +53,7 @@
 
             {% elif task.priority == 'High' %}
                 <tr class="table-warning border-top-0 border-bottom-0">
-                    <td><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>                         
+                    <th scope="row"><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></th>                         
                     <td>{{ task.priority }}</td>
                     <td>{{ task.category }}</td>
                     <td>{{ task.date_due }}</td>
@@ -62,7 +62,7 @@
 
             {% elif task.priority == 'Highest' %}
                 <tr class="table-danger border-top-0 border-bottom-0">
-                    <td><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></td>                         
+                    <th scope="row"><a class="text-body text-decoration-none" href="{% url 'task_details' task.pk %}">{{ task.name }}</a></th>                         
                     <td>{{ task.priority }}</td>
                     <td>{{ task.category }}</td>
                     <td>{{ task.date_due }}</td>
