--- a/todo_app/templates/todo/user_delete.html
+++ b/todo_app/templates/todo/user_delete.html
@@ -12,10 +12,12 @@
             <br>
 
             <div class="form-group w-75">
+
                 <form method="POST">                
                     {% csrf_token %}
-                    <button class="btn btn-danger px-5">Delete</button>                    
+                    <button class="btn btn-dark px-5 me-5">Delete</button>             
                 </form>
+                
             </div>        
         </div>
 
